--- a/src/components/common/ThemeToggle.astro
+++ b/src/components/common/ThemeToggle.astro
@@ -1,33 +1,33 @@
 ---
-import { Icon } from 'astro-icon/components'
+import { Icon } from "astro-icon/components";
 ---
 
-<button id="toggle-theme-button"
-    aria-label="Toggle dark mode"
-    class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border bg-background
-        text-text shadow-sm hover:bg-background-offset focus:outline-none focus:bg-background-offset">
-    <div id="icon-theme-light">
-        <Icon id='toggle-theme-icon' name={'Sun'} />
-    </div>
-    <div id="icon-theme-dark">
-        <Icon id='toggle-theme-icon' name={'Moon'} />
-    </div>
+<button
+  id="toggle-theme-button"
+  aria-label="Toggle dark mode"
+  class="bg-background text-text hover:bg-background-offset focus:bg-background-offset inline-flex items-center gap-x-2 rounded-lg border px-3 py-2 text-sm font-medium shadow-sm focus:outline-none">
+  <div id="icon-theme-light">
+    <Icon id="toggle-theme-icon" name={"Sun"} />
+  </div>
+  <div id="icon-theme-dark">
+    <Icon id="toggle-theme-icon" name={"Moon"} />
+  </div>
 </button>
 
 <script>
-    import { toggleMarkdownTheme, updateToggleThemeIcon } from "../../scripts/theme";
+  import { toggleMarkdownTheme, updateToggleThemeIcon } from "../../scripts/theme";
 
-    const button = document.getElementById('toggle-theme-button');
-    const getCurrentTheme = () => document.documentElement.dataset.theme;
+  const button = document.getElementById("toggle-theme-button");
+  const getCurrentTheme = () => document.documentElement.dataset.theme;
 
-    button?.addEventListener('click', () => {
-        const newTheme = getCurrentTheme() === 'dark' ? 'light' : 'dark';
+  button?.addEventListener("click", () => {
+    const newTheme = getCurrentTheme() === "dark" ? "light" : "dark";
 
-        document.documentElement.dataset.theme = newTheme;
-        localStorage.setItem('theme', newTheme);
-        updateToggleThemeIcon();
-        toggleMarkdownTheme(newTheme);
-    });
-
+    document.documentElement.dataset.theme = newTheme;
+    localStorage.setItem("theme", newTheme);
     updateToggleThemeIcon();
+    toggleMarkdownTheme(newTheme);
+  });
+
+  updateToggleThemeIcon();
 </script>
