--- a/src/components/layouts/Footer.astro
+++ b/src/components/layouts/Footer.astro
@@ -3,29 +3,22 @@ import { Icon } from "astro-icon/components";
 import { menuItems, socialLinks } from "../../config/cv.json";
 ---
 
-<section class="py-10 mt-4">
-  <div class="px-4 mx-auto sm:px-6 lg:px-8 max-w-7xl">
-    <div
-      class="text-center xl:flex xl:items-center xl:justify-between xl:text-left"
-    >
+<section class="mt-4 py-10">
+  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+    <div class="text-center xl:flex xl:items-center xl:justify-between xl:text-left">
       <div class="xl:flex xl:items-center xl:justify-start">
         <p class="mt-5 text-sm xl:ml-6 xl:mt-0"></p>
       </div>
 
-      <div
-        class="items-center mt-8 xl:mt-0 xl:flex xl:justify-end xl:space-x-8"
-      >
-        <ul
-          class="flex flex-wrap items-center justify-center gap-x-8 gap-y-3 xl:justify-end"
-        >
+      <div class="mt-8 items-center xl:mt-0 xl:flex xl:justify-end xl:space-x-8">
+        <ul class="flex flex-wrap items-center justify-center gap-x-8 gap-y-3 xl:justify-end">
           {
             menuItems.map((menu) => (
               <li>
                 <a
                   href={menu.link}
                   title={menu.name}
-                  class="text-sm transition-all duration-300 hover:text-offset focus:text-offset"
-                >
+                  class="text-sm transition-all duration-300 hover:text-offset focus:text-offset">
                   {menu.name}
                 </a>
               </li>
@@ -33,8 +26,7 @@ import { menuItems, socialLinks } from "../../config/cv.json";
           }
         </ul>
 
-        <div class="w-full h-px mt-8 mb-5 xl:w-px xl:m-0 xl:h-6 bg-border">
-        </div>
+        <div class="mb-5 mt-8 h-px w-full bg-border xl:m-0 xl:h-6 xl:w-px"></div>
 
         <ul class="flex items-center justify-center space-x-8 xl:justify-end">
           {
@@ -45,8 +37,7 @@ import { menuItems, socialLinks } from "../../config/cv.json";
                   title={social.iconName}
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="block transition-all duration-300 hover:text-offset focus:text-offset"
-                >
+                  class="block transition-all duration-300 hover:text-offset focus:text-offset">
                   <Icon name={social.iconName} />
                 </a>
               </li>
