--- a/src/components/layouts/Header.astro
+++ b/src/components/layouts/Header.astro
@@ -5,22 +5,17 @@ import { basic, menuItems } from "../../config/cv.json";
 ---
 
 <header class="bg-background py-4">
-  <div
-    class="container max-w-6xl mx-auto flex justify-between items-center px-4 md:px-8"
-  >
+  <div class="container mx-auto flex max-w-6xl items-center justify-between px-4 md:px-8">
     <!-- Logo -->
     <div class="text-2xl font-bold">
-      <a
-        target="_blank"
-        rel="noopener noreferrer"
-        href={basic.linkedin}
-        class="hover:text-offset">{basic?.name}</a
-      >
+      <a target="_blank" rel="noopener noreferrer" href={basic.linkedin} class="hover:text-offset">
+        {basic?.name}
+      </a>
     </div>
 
     <div class="flex gap-5">
       <!-- PC Menu -->
-      <nav class="hidden sm:flex space-x-6 items-center">
+      <nav class="hidden items-center space-x-6 sm:flex">
         {
           menuItems.map((item) => (
             <a href={item.link} class="hover:text-offset">
@@ -31,12 +26,8 @@ import { basic, menuItems } from "../../config/cv.json";
       </nav>
 
       <!-- Mobile Menu Button -->
-      <div class="sm:hidden flex">
-        <button
-          id="menu-btn"
-          class="focus:outline-none"
-          aria-label="Mobile open menu"
-        >
+      <div class="flex sm:hidden">
+        <button id="menu-btn" class="focus:outline-none" aria-label="Mobile open menu">
           <Icon name="Menu" class="size-6" />
         </button>
       </div>
@@ -49,7 +40,7 @@ import { basic, menuItems } from "../../config/cv.json";
   <div id="mobile-menu" class="hidden sm:hidden">
     {
       menuItems.map((item) => (
-        <a href={item.link} class="block px-4 py-2 hover:bg-background-offset">
+        <a href={item.link} class="hover:bg-background-offset block px-4 py-2">
           {item.name}
         </a>
       ))
