--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -7,24 +7,24 @@ const name = basic?.name?.split(" ")[0] ?? "";
 const surname = basic?.name?.split(" ").slice(1).join(" ") ?? "";
 ---
 
-<section id="home" class="py-5 px-4 sm:py-10 lg:py-16">
-  <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
-    <div class="grid items-center grid-cols-1 gap-12 lg:grid-cols-2">
+<section id="home" class="px-4 py-5 sm:py-10 lg:py-16">
+  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+    <div class="grid grid-cols-1 items-center gap-12 lg:grid-cols-2">
       <div class="relative flex justify-center">
         <!-- add round image here -->
         <Image
-          class="w-full md:max-w-md lg:max-w-md rounded-full"
+          class="w-full rounded-full md:max-w-md lg:max-w-md"
           src={heroImage}
           loading="eager"
           alt="Mónica Perdomo Santana - Profile Picture"
         />
       </div>
       <div>
-        <p class="font-bold text-lg text-offset">
+        <p class="text-lg font-bold text-offset">
           {basic?.job}
         </p>
 
-        <h1 class="text-2xl font-bold sm:text-4xl lg:text-5xl mt-3">
+        <h1 class="mt-3 text-2xl font-bold sm:text-4xl lg:text-5xl">
           {name}
           <span class="text-marking">{surname}</span>
         </h1>
@@ -33,50 +33,46 @@ const surname = basic?.name?.split(" ").slice(1).join(" ") ?? "";
           {basic?.summary}
         </p>
 
-        <div class="mt-10 flex gap-4 flex-wrap">
+        <div class="mt-10 flex flex-wrap gap-4">
           <a
             href={`/cv/${basic?.cv_file_name}`}
             title="Download CV"
             download
             role="button"
-            class="relative isolate overflow-hidden text-white bg-primary hover:bg-secondary focus:ring-4 focus:outline-none focus:ring-border shadow-md font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:shadow-xl"
-          >
+            class="focus:ring-border relative isolate overflow-hidden rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white shadow-md transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:bg-secondary hover:shadow-xl focus:outline-none focus:ring-4">
             <span class="relative z-10">Download CV</span>
             <span
-              class="absolute inset-0 z-0 bg-white/20 blur-md opacity-0 hover:opacity-100 transition-opacity duration-500 pointer-events-none"
-            ></span>
+              class="pointer-events-none absolute inset-0 z-0 bg-white/20 opacity-0 blur-md transition-opacity duration-500 hover:opacity-100">
+            </span>
           </a>
           <a
             href={basic.linkedin}
             target="_blank"
             rel="noopener noreferrer"
             role="button"
-            class="relative isolate overflow-hidden text-white bg-primary hover:bg-secondary focus:ring-4 focus:outline-none focus:ring-border shadow-md font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:shadow-xl"
-          >
+            class="focus:ring-border relative isolate overflow-hidden rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white shadow-md transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:bg-secondary hover:shadow-xl focus:outline-none focus:ring-4">
             <span class="relative z-10">LinkedIn</span><span
-              class="absolute inset-0 z-0 bg-white/20 blur-md opacity-0 hover:opacity-100 transition-opacity duration-500 pointer-events-none"
-            ></span>
+              class="pointer-events-none absolute inset-0 z-0 bg-white/20 opacity-0 blur-md transition-opacity duration-500 hover:opacity-100">
+            </span>
           </a>
           <a
             href="https://github.com/MonicaPerdomoSantana"
             target="_blank"
             rel="noopener noreferrer"
             role="button"
-            class="relative isolate overflow-hidden text-white bg-primary hover:bg-secondary focus:ring-4 focus:outline-none focus:ring-border shadow-md font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:shadow-xl"
-          >
+            class="focus:ring-border relative isolate overflow-hidden rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white shadow-md transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:bg-secondary hover:shadow-xl focus:outline-none focus:ring-4">
             <span class="relative z-10">GitHub</span><span
-              class="absolute inset-0 z-0 bg-white/20 blur-md opacity-0 hover:opacity-100 transition-opacity duration-500 pointer-events-none"
-            ></span>
+              class="pointer-events-none absolute inset-0 z-0 bg-white/20 opacity-0 blur-md transition-opacity duration-500 hover:opacity-100">
+            </span>
           </a>
           <a
             href="mailto:moni320097@gmail.com"
             role="button"
-            class="relative isolate overflow-hidden text-white bg-primary hover:bg-secondary focus:ring-4 focus:outline-none focus:ring-border shadow-md font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:shadow-xl"
-          >
-            <span class="relative z-10"> Contact me! </span>
+            class="focus:ring-border relative isolate overflow-hidden rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white shadow-md transition-all duration-300 ease-in-out hover:-translate-y-0.5 hover:scale-105 hover:bg-secondary hover:shadow-xl focus:outline-none focus:ring-4">
+            <span class="relative z-10">Contact me!</span>
             <span
-              class="absolute inset-0 z-0 bg-white/20 blur-md opacity-0 hover:opacity-100 transition-opacity duration-500 pointer-events-none"
-            ></span>
+              class="pointer-events-none absolute inset-0 z-0 bg-white/20 opacity-0 blur-md transition-opacity duration-500 hover:opacity-100">
+            </span>
           </a>
         </div>
       </div>
