--- a/src/components/sections/Project.astro
+++ b/src/components/sections/Project.astro
@@ -3,17 +3,18 @@ const { imageUrl, title, type, link } = Astro.props;
 ---
 
 <a href={link} target="_blank" rel="noopener noreferrer">
-    <div class="relative overflow-hidden rounded-lg cursor-pointer h-64 group">
-        <div 
-            class="absolute inset-0 bg-cover transition-transform duration-700 group-hover:scale-110" 
-            style={`background-image: url('${imageUrl}');`}>
-        </div>
-
-        <div
-            class="flex flex-col justify-center w-full h-full px-8 py-4 transition-opacity duration-700
-                opacity-0 backdrop-blur-sm bg-gray-900/85 group-hover:opacity-100">
-            <h2 class="mt-4 text-xl font-semibold text-white">{title}</h2>
-            <p class="mt-2 text-lg font-bold tracking-wider text-primary uppercase">{type}</p>
-        </div>
+  <div class="group relative h-64 cursor-pointer overflow-hidden rounded-lg">
+    <div
+      class="absolute inset-0 bg-cover transition-transform duration-700 group-hover:scale-110"
+      style={`background-image: url('${imageUrl}');`}>
     </div>
+
+    <div
+      class="flex h-full w-full flex-col justify-center bg-gray-900/85 px-8 py-4 opacity-0 backdrop-blur-sm transition-opacity duration-700 group-hover:opacity-100">
+      <h2 class="mt-4 text-xl font-semibold text-white">{title}</h2>
+      <p class="mt-2 text-lg font-bold uppercase tracking-wider text-primary">
+        {type}
+      </p>
+    </div>
+  </div>
 </a>
