--- a/src/components/sections/Resume.astro
+++ b/src/components/sections/Resume.astro
@@ -1,12 +1,12 @@
 ---
-import Experience from './portfolio/Experience.astro';
-import Education from './portfolio/Education.astro';
+import Experience from "./portfolio/Experience.astro";
+import Education from "./portfolio/Education.astro";
 ---
 
-<section class="py-8 bg-background">
+<section class="bg-background py-8">
   <div class="container mx-auto px-6">
     <div class="flex flex-col lg:flex-row lg:space-x-12">
-      <div class="lg:w-1/2 mb-12 lg:mb-0">
+      <div class="mb-12 lg:mb-0 lg:w-1/2">
         <Experience />
       </div>
 
