--- a/src/components/sections/portfolio/Projects.astro
+++ b/src/components/sections/portfolio/Projects.astro
@@ -52,53 +52,43 @@ const PROJECTS = [
 ];
 ---
 
-<section id="portfolio" class="w-full mx-auto max-w-7xl py-36">
-  <h1 class="text-3xl lg:text-5xl mx-8 font-semibold text-center capitalize">
+<section id="portfolio" class="mx-auto w-full max-w-7xl py-36">
+  <h1 class="mx-8 text-center text-3xl font-semibold capitalize lg:text-5xl">
     Experience & Projects
   </h1>
-  <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mx-8 mt-8 xl:mt-12">
+  <div class="mx-8 mt-8 grid grid-cols-1 gap-8 lg:grid-cols-2 xl:mt-12">
     {
       PROJECTS.map(({ id, image, title, description, tags }) => (
         <article
           data-dialog-open={id}
-          class="flex flex-col h-full bg-offset hover:bg-start transition-all duration-300 ease-in-out hover:shadow-lg hover:-translate-y-1 hover:border-primary"
-        >
+          class="flex h-full flex-col bg-offset transition-all duration-300 ease-in-out hover:-translate-y-1 hover:border-primary hover:bg-start hover:shadow-lg">
           <>
             <a
               id={id + "-open"}
-              class="flex flex-col h-full
-      items-center rounded-lg shadow-sm
-      border border-default hover:border-primary
-      cursor-pointer"
-            >
-              <div class="w-full aspect-[16/9] overflow-hidden rounded-t-lg">
+              class="flex h-full cursor-pointer flex-col items-center rounded-lg border border-default shadow-sm hover:border-primary">
+              <div class="aspect-[16/9] w-full overflow-hidden rounded-t-lg">
                 <img
-                  class="object-cover w-full h-full transition-transform duration-500 ease-in-out hover:scale-110"
+                  class="h-full w-full object-cover transition-transform duration-500 ease-in-out hover:scale-110"
                   src={image}
                   alt=""
                 />
               </div>
-              <div class="flex flex-col justify-between p-5 leading-normal flex-grow">
+              <div class="flex flex-grow flex-col justify-between p-5 leading-normal">
                 <h5 class="mb-2 text-2xl font-bold tracking-tight">{title}</h5>
                 {description.split("\n").map((line) => (
-                  <p class="mb-3 font-normal text-xl">{line}</p>
+                  <p class="mb-3 text-xl font-normal">{line}</p>
                 ))}
 
-                <span class="mb-4 text-primary font-semibold italic select-none self-start">
+                <span class="mb-4 select-none self-start font-semibold italic text-primary">
                   Click to see details →
                 </span>
 
-                <div class="flex flex-wrap mt-2">
-                  <ul class="flex flex-row flex-wrap gap-y-2 mb-2 gap-x-4">
+                <div class="mt-2 flex flex-wrap">
+                  <ul class="mb-2 flex flex-row flex-wrap gap-x-4 gap-y-2">
                     {tags.map((tag) => (
                       <li>
                         <span
-                          class={`relative flex items-center justify-center rounded-full px-4 py-2 text-sm font-bold uppercase tracking-wide transition-all duration-300 transform
-                                ${tag.class} 
-                                shadow-[inset_0_1px_1px_rgba(255,255,255,0.4),inset_0_-1px_1px_rgba(0,0,0,0.2)] 
-                                ring-1 ring-white/10
-                                hover:scale-110 hover:shadow-[0_2px_10px_rgba(255,255,255,0.3),inset_0_1px_1px_rgba(255,255,255,0.5)]`}
-                        >
+                          class={`relative flex transform items-center justify-center rounded-full px-4 py-2 text-sm font-bold uppercase tracking-wide transition-all duration-300 ${tag.class} shadow-[inset_0_1px_1px_rgba(255,255,255,0.4),inset_0_-1px_1px_rgba(0,0,0,0.2)] ring-1 ring-white/10 hover:scale-110 hover:shadow-[0_2px_10px_rgba(255,255,255,0.3),inset_0_1px_1px_rgba(255,255,255,0.5)]`}>
                           {tag.name}
                         </span>
                       </li>
