--- a/src/components/sections/portfolio/Social_icons.astro
+++ b/src/components/sections/portfolio/Social_icons.astro
@@ -1,10 +1,7 @@
 <a
-  class="rounded-full border border-white/10 flex justify-center items-center gap-x-2 py-1 px-2 md:py-2 md:px-4
-text-xs md:text-base
- bg-white/5 hover:scale-110 hover:bg-white/20 transition"
+  class="flex items-center justify-center gap-x-2 rounded-full border border-white/10 bg-white/5 px-2 py-1 text-xs transition hover:scale-110 hover:bg-white/20 md:px-4 md:py-2 md:text-base"
   {...Astro.props}
   target="_blank"
-  rel="noopener noreferrer"
->
+  rel="noopener noreferrer">
   <slot />
 </a>
