--- a/src/components/sections/portfolio/projects/NextTaskProject.astro
+++ b/src/components/sections/portfolio/projects/NextTaskProject.astro
@@ -2,47 +2,27 @@
 
 ---
 
-<div class="sm:text-2xl">
-  <h2 class="text-2xl sm:text-6xl font-bold mb-4 sm:mb-10 text-default">
-    Test Plan & Bug Reporting — NextTask App
-  </h2>
-
-  <p class="mb-4">
+<div class="modal-content-wrapper">
+  <h2>Test Plan & Bug Reporting — NextTask App</h2>
+  <p>
     During one sprint, I collaborated on a forked version of the open-source app
-    <a
-      href="https://solara-next-task.netlify.app/"
-      target="_blank"
-      class="text-link underline">NextTask</a
-    >. A teammate handled the development, while I focused on writing a detailed <strong
-      class="text-yellow-600">test plan</strong
-    >
-    covering several key <strong class="text-yellow-600">features</strong> and <strong
-      class="text-yellow-600">user stories</strong
-    >.
+    <a href="https://solara-next-task.netlify.app/" target="_blank" class="text-link underline">
+      NextTask
+    </a>. A teammate handled the development, while I focused on writing a detailed
+    <strong>test plan</strong> covering several key <strong>features</strong> and
+    <strong>user stories</strong>.
   </p>
-
-  <p class="mb-4">
-    I used <strong class="text-yellow-600">Xray</strong> and <strong
-      class="text-yellow-600">Jira</strong
-    > to manage test cases and bug reports, with full documentation structured in
-    <strong class="text-yellow-600">Confluence</strong>. The testing focused on
-    core CRUD operations and ensuring traceability from requirements to test
-    coverage.
+  <p>
+    I used <strong>Xray</strong> and <strong>Jira</strong> to manage test cases and bug reports, with
+    full documentation structured in <strong>Confluence</strong>. The testing focused on core CRUD
+    operations and ensuring traceability from requirements to test coverage.
   </p>
-
-  <p class="mb-4 text-default">
-    You can view the original app on the previous link or download the test
-    documentation as a PDF on the button below.
+  <p>
+    You can view the original app on the previous link or download the test documentation as a PDF
+    on the button below.
   </p>
-
-  <div
-    class="flex flex-wrap sm:justify-end flex-col sm:flex-row gap-4 mt-6 sm:mt-10 text-base sm:text-lg"
-  >
-    <a
-      href="/projects/Placeholder.pdf"
-      download
-      class="px-4 py-2 text-center rounded bg-primary text-white hover:opacity-90 transition"
-    >
+  <div class="modal-buttons">
+    <a href="/projects/Placeholder.pdf" download class="bg-primary text-white">
       <span>Download Test Plan PDF</span>
     </a>
   </div>
