--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,34 +29,26 @@ const { title } = Astro.props;
       if (themeSaved) {
         document.documentElement.dataset.theme = themeSaved;
       } else {
-        const prefersDark = window.matchMedia(
-          "(prefers-color-scheme: dark)"
-        ).matches;
+        const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
 
         document.documentElement.dataset.theme = prefersDark ? "dark" : "light";
       }
 
-      window
-        .matchMedia("(prefers-color-scheme: dark)")
-        .addEventListener("change", (event) => {
-          if (!localStorage.getItem("theme")) {
-            document.documentElement.dataset.theme = event.matches
-              ? "dark"
-              : "light";
-          }
-        });
+      window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", (event) => {
+        if (!localStorage.getItem("theme")) {
+          document.documentElement.dataset.theme = event.matches ? "dark" : "light";
+        }
+      });
     </script>
   </head>
   <body
-    class="h-full flex flex-col overflow-x-hidden
-		text-default text-base selection:bg-secondary"
+    class="flex h-full flex-col overflow-x-hidden text-base text-default selection:bg-secondary"
     style="
       background-image: linear-gradient(to bottom, var(--color-body-background-start), var(--color-body-background-end));
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
-      background-position: center;"
-  >
+      background-position: center;">
     <Header />
     <section class="flex-grow">
       <slot />
