--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import NotFound from '../components/layouts/NotFound.astro';
+import Layout from "../layouts/Layout.astro";
+import NotFound from "../components/layouts/NotFound.astro";
 ---
 
 <Layout title="Page Not Found">
-	<NotFound />
+  <NotFound />
 </Layout>
