added a new class for title

--- a/src/components/sections/portfolio/projects/ProjectModalLayout.astro
+++ b/src/components/sections/portfolio/projects/ProjectModalLayout.astro
@@ -13,7 +13,7 @@ const { id } = Astro.props;
     }
 
     h2 {
-      @apply mb-4 text-2xl font-bold text-default sm:mb-10 sm:text-6xl;
+      @apply mb-4 text-pretty text-2xl font-bold text-default sm:mb-10 sm:text-6xl;
     }
 
     p {
