added new badge

--- a/src/components/sections/portfolio/Projects.astro
+++ b/src/components/sections/portfolio/Projects.astro
@@ -28,6 +28,10 @@ const TAGS = {
     name: "GitHub Actions",
     class: "bg-purple-700 text-white",
   },
+  agileScrum: {
+    name: "Agile / Scrum",
+    class: "bg-indigo-600 text-white",
+  },
 };
 
 const PROJECTS = [
@@ -47,7 +51,7 @@ const PROJECTS = [
       "Created a comprehensive test plan for NextTask using Xray and Jira, with full documentation in Confluence. Focused on core CRUD validation and traceability.",
     link: "#",
     image: "/projects/jira.png",
-    tags: [TAGS.jira, TAGS.xray],
+    tags: [TAGS.jira, TAGS.xray, TAGS.agileScrum],
   },
 ];
 ---
