added cross to close modal

--- a/src/components/sections/portfolio/projects/NextTaskProject.astro
+++ b/src/components/sections/portfolio/projects/NextTaskProject.astro
@@ -21,7 +21,7 @@
     You can view the original app on the previous link or download the test documentation as a PDF
     on the button below.
   </p>
-  <div class="modal-buttons">
+  <div class="modal-buttons !justify-end">
     <a href="/projects/Placeholder.pdf" download class="bg-primary text-white">
       <span>Download Test Plan PDF</span>
     </a>
