--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Resume from "../components/sections/Resume.astro";
 import Projects from "../components/sections/portfolio/Projects.astro";
 ---
 
-<Layout title="Astro Resume Theme">
+<Layout title="Mónica Perdomo">
   <Hero />
   <Projects />
   <Resume />
