--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,11 +15,30 @@ const { title } = Astro.props;
 <html lang="en" class="h-full scroll-smooth" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="sitemap" href="/sitemap-index.xml" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portafolio personal de Mónica Perdomo Santana, QA Tester." />
+    <meta name="author" content="Mónica Perdomo" />
+    <meta
+      name="keywords"
+      content="portafolio, testing, jira, qa, test management, jira, xray, scrum, playwright, postman, jenkins, github, gitlab, gitlab ci, ci/cd, devops, javascript"
+    />
     <meta name="generator" content={Astro.generator} />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://monica-perdomo-portfolio.netlify.app" />
+    <meta property="og:title" content="{title}" />
+    <meta property="og:description" content="Portafolio de Mónica Perdomo, QA Tester." />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://monica-perdomo-portfolio.netlify.app" />
+    <meta name="twitter:title" content="{title}" />
+    <meta name="twitter:description" content="Portafolio de Mónica Perdomo, QA Tester." />
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
     <title>{title}</title>
 
     <!-- initialize theme -->
@@ -30,7 +49,6 @@ const { title } = Astro.props;
         document.documentElement.dataset.theme = themeSaved;
       } else {
         const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
-
         document.documentElement.dataset.theme = prefersDark ? "dark" : "light";
       }
 
