--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,13 +27,13 @@ const { title } = Astro.props;
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://monica-perdomo-portfolio.netlify.app" />
-    <meta property="og:title" content="{title}" />
+    <meta property="og:title" content={title} />
     <meta property="og:description" content="Portafolio de Mónica Perdomo, QA Tester." />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://monica-perdomo-portfolio.netlify.app" />
-    <meta name="twitter:title" content="{title}" />
+    <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content="Portafolio de Mónica Perdomo, QA Tester." />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
