--- a/src/components/sections/portfolio/projects/NextTaskProject.astro
+++ b/src/components/sections/portfolio/projects/NextTaskProject.astro
@@ -1,26 +1,14 @@
 ---
+import Paragraph from "./Paragraph.astro";
+
 
 ---
 
 <div class="modal-content-wrapper">
   <h2>Test Plan & Bug Reporting — NextTask App</h2>
-  <p>
-    During one sprint, I collaborated on a forked version of the open-source app
-    <a href="https://solara-next-task.netlify.app/" target="_blank" class="text-link underline">
-      NextTask
-    </a>. A teammate handled the development, while I focused on writing a detailed
-    <strong>test plan</strong> covering several key <strong>features</strong> and
-    <strong>user stories</strong>.
-  </p>
-  <p>
-    I used <strong>Xray</strong> and <strong>Jira</strong> to manage test cases and bug reports, with
-    full documentation structured in <strong>Confluence</strong>. The testing focused on core CRUD
-    operations and ensuring traceability from requirements to test coverage.
-  </p>
-  <p>
-    You can view the original app on the previous link or download the test documentation as a PDF
-    on the button below.
-  </p>
+  <Paragraph content={'During one sprint, I collaborated on a forked version of the open-source app <a href="https://solara-next-task.netlify.app/" target="_blank" class="text-link underline">NextTask</a>. A teammate handled the development, while I focused on writing a detailed ##test plan## covering several key ##features## and ##user stories##.'} />
+  <Paragraph content={'I used ##Xray## and ##Jira## to manage test cases and bug reports, with full documentation structured in ##Confluence##. The testing focused on core CRUD operations and ensuring traceability from requirements to test coverage.'} />
+  <Paragraph content={'You can view the original app on the previous link or download the test documentation as a PDF on the button below.'} />
   <div class="modal-buttons !justify-end">
     <a href="/projects/Placeholder.pdf" download class="bg-primary text-white">
       <span>Download Test Plan PDF</span>
