--- a/src/components/sections/portfolio/projects/NextTaskProject.astro
+++ b/src/components/sections/portfolio/projects/NextTaskProject.astro
@@ -6,7 +6,7 @@ import Paragraph from "./Paragraph.astro";
   <h2>Test Plan & Bug Reporting — NextTask App</h2>
   <Paragraph content={'During one sprint, I collaborated on a forked version of the open-source app <a href="https://solara-next-task.netlify.app/" target="_blank" class="text-link underline">NextTask</a>. A teammate handled the development, while I focused on writing a detailed ##test plan## covering several key ##features## and ##user stories##.'} />
   <Paragraph content={'I used ##Xray## and ##Jira## to manage test cases and bug reports, with full documentation structured in ##Confluence##. The testing focused on core CRUD operations and ensuring traceability from requirements to test coverage.'} />
-  <Paragraph content={'You can view the original app on the previous link or download the test documentation as a PDF on the button below.'} />
+  <Paragraph content={'You can view the original app on the previous link and check the test documentation on the button below.'} />
   <div class="modal-buttons !justify-end">
     <a href="https://drive.google.com/drive/folders/1PvnlGZutKLkBdqrxGEgLMc1Hs_BZF9Js?usp=sharing" target="_blank" class="bg-primary text-white">
       <span>Test Plan and Test Procedure Samples</span>
