checking github app

--- a/src/components/common/Pagination.astro
+++ b/src/components/common/Pagination.astro
@@ -12,7 +12,7 @@ const hasNextPage = page.url.next;
 const currentPage = page.currentPage;
 ---
 
-<nav aria-label="Blog pagination" class="mt-8 flex items-center justify-center space-x-4">
+<nav aria-label="Blog pagination" class="ddd mt-8 flex items-center justify-center space-x-4">
   {
     hasPreviousPage ? (
       <a
