--- a/src/components/sections/portfolio/projects/NextTaskPlaywrightProject.astro
+++ b/src/components/sections/portfolio/projects/NextTaskPlaywrightProject.astro
@@ -22,20 +22,13 @@ import Paragraph from "./Paragraph.astro";
   <Paragraph
     content={"This setup ensures every commit gets instant feedback about the UI’s health. It’s fast, scalable, and helps catch regressions early in the development cycle."}
   />
-  <div class="modal-buttons">
+  <div class="modal-buttons !justify-end">
     <a
-      href="https://github.com/MonicaPerdomoSantana/nexttask-playwright-e2e"
+      href="https://github.com/MonicaPerdomoSantana/next-task-playwright-automation"
       target="_blank"
       role="button"
       class="bg-primary text-white">
-      GitHub repository
-    </a>
-    <a
-      href="https://monicaperdomosantana.github.io/nexttask-playwright-e2e/"
-      target="_blank"
-      role="button"
-      class="bg-green-600 text-white">
-      Latest report
+      <span>GitHub repository</span>
     </a>
   </div>
 </div>
