--- a/src/components/sections/portfolio/projects/NextTaskProject.astro
+++ b/src/components/sections/portfolio/projects/NextTaskProject.astro
@@ -17,6 +17,7 @@ import Paragraph from "./Paragraph.astro";
     <a
       href="https://drive.google.com/drive/folders/1PvnlGZutKLkBdqrxGEgLMc1Hs_BZF9Js?usp=sharing"
       target="_blank"
+      role="button"
       class="bg-primary text-white">
       <span>Test Plan and Test Procedure Samples</span>
     </a>
